# AI-Manus

backend/: pyproject.toml
backend/app/interfaces/: dependencies.py
backend/app/interfaces/api/: auth_routes.py
