[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.0",
    "beanie>=1.25.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=3.4.8",
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp>=1.9.0",
    "motor>=3.3.2",
    "mypy>=1.19.1",
    "openai>=2.16.0",
    "playwright>=1.42.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.8.0",
    "pylance>=1.0.4",
    "pymongo>=4.6.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=5.0.1",
    "rich>=14.3.2",
    "ruff>=0.14.14",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
